# models/role_model.go
@@ -1,12 +1,19 @@
 package models
 
-import "time"
+import (
+	"time"
+
+	"go.mongodb.org/mongo-driver/bson/primitive"
+)
 
 type Role struct {
-	ID          string              `bson:"_id" json:"id"`                          // Rol ID'si (örn: "admin")
-	Permissions map[string][]string `bson:"permissions" json:"permissions"`         // Modül bazlı izinler
-	CreatedAt   time.Time           `bson:"created_at" json:"created_at"`           // Oluşturulma tarihi
-	UpdatedAt   time.Time           `bson:"updated_at" json:"updated_at"`           // Güncellenme tarihi
-	CreatedBy   string              `bson:"created_by" json:"created_by"`           // Rolü oluşturan kullanıcı
-	UpdatedBy   string              `bson:"updated_by" json:"updated_by,omitempty"` // Rolü güncelleyen son kullanıcı
+	ID          primitive.ObjectID   `bson:"_id,omitempty" json:"id"`
+	Name        string               `bson:"name" json:"name"`
+	Description string               `bson:"description" json:"description"`
+	Permissions []primitive.ObjectID `bson:"permissions" json:"permissions"` // 🔗 Permission referansları
+	IsSystem    bool                 `bson:"is_system" json:"is_system"`
+	CreatedAt   time.Time            `bson:"created_at" json:"created_at"`
+	UpdatedAt   time.Time            `bson:"updated_at" json:"updated_at"`
+	CreatedBy   string               `bson:"created_by" json:"created_by"`
+	UpdatedBy   string               `bson:"updated_by,omitempty" json:"updated_by,omitempty"`
 }
